--- a/index.html
+++ b/index.html
@@ -39,11 +39,13 @@
       background: #28a745; color: white; border: none;
       display: flex; flex-direction: column; align-items: center; justify-content: center;
       box-shadow: 0 6px #155724;
+      overflow: hidden; /* はみ出し防止 */
     }
     #shot-btn.measuring { background: #ff8c00; box-shadow: 0 0 20px #ff8c00; animation: pulse 1.5s infinite; }
     @keyframes pulse { 0%, 100% { transform: scale(1); } 50% { transform: scale(0.95); } }
 
-    #club-name { font-size: 55px; font-weight: 900; line-height: 1; }
+    /* 初期状態を20pxに固定してはみ出しを防止 */
+    #club-name-display { font-size: 20px; font-weight: 900; line-height: 1.1; text-align: center; width: 90%; }
     #club-dist-val { font-size: 14px; font-weight: bold; opacity: 0.9; margin-top: 2px; }
 
     .side-btn { width: 60px; height: 60px; border-radius: 50%; background: #444; color: #fff; border: none; font-size: 10px; font-weight: bold; }
@@ -61,16 +63,16 @@
       background: rgba(0,0,0,0.95); display: none; flex-direction: column; align-items: center; z-index: 100;
     }
     .panel-header { color: #28a745; margin: 20px 0 10px; font-size: 20px; font-weight: bold; }
-    .list-container { flex: 1; width: 90%; overflow-y: auto !important; padding: 10px; }
+    .list-container { flex: 1; width: 95%; overflow-y: auto !important; padding: 10px; }
     .close-btn { margin: 15px 0 25px; padding: 12px 30px; background: #28a745; border: none; color: white; border-radius: 25px; font-weight: bold; }
 
     .hole-item {
       display: flex; justify-content: space-between; align-items: center;
       padding: 15px; background: #222; margin-bottom: 8px; border-radius: 8px; font-size: 18px;
     }
-    .club-row { display: flex; align-items: center; justify-content: space-between; margin-bottom: 8px; background: #222; padding: 5px 10px; border-radius: 8px; }
-    select.club-sel { background: #333; color: #fff; border: 1px solid #555; padding: 10px; border-radius: 4px; width: 80px; font-size: 16px; }
-    input.club-dist { background: #000; color: #28a745; border: 1px solid #444; padding: 10px; width: 70px; text-align: center; border-radius: 4px; font-size: 16px; font-weight: bold; }
+    .club-row { display: flex; align-items: center; justify-content: space-between; margin-bottom: 8px; background: #222; padding: 5px 10px; border-radius: 8px; gap: 5px; }
+    input.club-name-in { background: #333; color: #fff; border: 1px solid #555; padding: 10px; border-radius: 4px; width: 75px; font-size: 16px; text-align: center; }
+    input.club-dist { background: #000; color: #28a745; border: 1px solid #444; padding: 10px; width: 65px; text-align: center; border-radius: 4px; font-size: 16px; font-weight: bold; }
     
     #score-display { font-size: 18px; color: #007bff; font-weight: bold; }
   </style>
@@ -89,7 +91,7 @@
   <div class="btn-row">
     <button class="side-btn" onclick="resetAll()">RESET</button>
     <button id="shot-btn" onclick="startShot()">
-      <div id="club-name">SHOT A</div>
+      <div id="club-name-display">SHOT A</div>
       <div id="club-dist-val"></div>
     </button>
     <button class="side-btn score-btn" onclick="addScore()">＋1<br>SHOT</button>
@@ -102,7 +104,7 @@
   <div id="drive-info">
     <div class="label">DRIVE (FROM START)</div>
     <div>
-      <span id="drive">000</span><span class="version-info">v1.1.1</span>
+      <span id="drive">000</span><span class="version-info">v1.1.3</span>
     </div>
     <div id="last-shot-dist">LAST SHOT: --- yds</div>
   </div>
@@ -141,10 +143,17 @@ zanpaHoles.forEach(hole => {
   holeList.appendChild(item);
 });
 
+let myClubs = [
+  {name: "1W", dist: 230}, {name: "5W", dist: 190}, {name: "5U", dist: 170},
+  {name: "7i", dist: 150}, {name: "8i", dist: 140}, {name: "9i", dist: 130},
+  {name: "PW", dist: 115}, {name: "52°", dist: 95}, {name: "58°", dist: 75},
+  {name: "", dist: 0}, {name: "", dist: 0}, {name: "", dist: 0}, {name: "", dist: 0}, {name: "", dist: 0}
+];
+
 function getBestClubInfo(dist) {
   let best = {name: "SHOT A", d: ""};
   myClubs.forEach(club => {
-    if (club.name !== "---" && club.dist > 0 && dist <= club.dist) {
+    if (club.name.trim() !== "" && club.dist > 0 && dist <= club.dist) {
       best = {name: club.name, d: club.dist + " yds"};
     }
   });
@@ -153,13 +162,21 @@ function getBestClubInfo(dist) {
 
 function updateClubDisplay(dist) {
   const info = getBestClubInfo(dist);
-  const nameEl = document.getElementById('club-name');
+  const nameEl = document.getElementById('club-name-display');
   const distEl = document.getElementById('club-dist-val');
-  
   nameEl.innerText = info.name;
   distEl.innerText = info.d ? "(" + info.d + ")" : "";
   
-  nameEl.style.fontSize = (info.name === "SHOT A") ? "20px" : "55px";
+  // 文字サイズ調整ロジック
+  if (info.name === "SHOT A") {
+    nameEl.style.fontSize = "20px";
+  } else {
+    // 文字数に応じて45px〜30pxの間で調整
+    let size = 45;
+    if (info.name.length > 3) size = 35;
+    if (info.name.length > 5) size = 28;
+    nameEl.style.fontSize = size + "px";
+  }
 }
 
 function selectHole(d) {
@@ -184,24 +201,32 @@ function toggleHolePanel() {
   p.style.display = (p.style.display === 'flex') ? 'none' : 'flex';
 }
 
-const clubOptions = ["---", "1W", "3W", "5W", "7W", "9W", "2U", "3U", "4U", "5U", "6U", "3i", "4i", "5i", "6i", "7i", "8i", "9i", "PW", "AW", "GW", "SW", "LW", "PT"];
-let myClubs = [
-  {name: "1W", dist: 230}, {name: "5W", dist: 190}, {name: "5U", dist: 170},
-  {name: "7i", dist: 150}, {name: "8i", dist: 140}, {name: "9i", dist: 130},
-  {name: "PW", dist: 115}, {name: "AW", dist: 95}, {name: "SW", dist: 75},
-  {name: "---", dist: 0}, {name: "---", dist: 0}, {name: "---", dist: 0}, {name: "---", dist: 0}, {name: "---", dist: 0}
-];
 const container = document.getElementById('club-container');
-myClubs.forEach((club, index) => {
-  const row = document.createElement('div');
-  row.className = 'club-row';
-  let optionsHtml = clubOptions.map(opt => `<option value="${opt}" ${opt === club.name ? 'selected' : ''}>${opt}</option>`).join('');
-  row.innerHTML = `<span style="color:#888; font-size:12px;">${index+1}</span><select class="club-sel" onchange="updateClubData(${index},'name',this.value)">${optionsHtml}</select><input type="number" class="club-dist" value="${club.dist}" onchange="updateClubData(${index},'dist',this.value)"><span style="color:#888;">yds</span>`;
-  container.appendChild(row);
-});
-function updateClubData(i,k,v){ if(k==='dist')v=parseInt(v)||0; myClubs[i][k]=v; if(totalDist > 0) updateClubDisplay(totalDist); }
+function renderSettings() {
+  container.innerHTML = "";
+  myClubs.forEach((club, index) => {
+    const row = document.createElement('div');
+    row.className = 'club-row';
+    row.innerHTML = `<span style="color:#888; font-size:11px;">${index+1}</span>
+      <input type="text" class="club-name-in" value="${club.name}" placeholder="番手" onchange="updateClubData(${index},'name',this.value)">
+      <input type="number" class="club-dist" value="${club.dist}" onchange="updateClubData(${index},'dist',this.value)">
+      <span style="color:#888; font-size:12px;">yds</span>`;
+    container.appendChild(row);
+  });
+}
+
+function updateClubData(i,k,v){ 
+  if(k==='dist') v = parseInt(v) || 0;
+  myClubs[i][k] = v; 
+  if(totalDist > 0) updateClubDisplay(totalDist);
+}
+
 function askTotal(){ const n = prompt("ヤード入力", totalDist); if(n){ totalDist=parseInt(n); document.getElementById('total-val').innerText=totalDist; document.getElementById('remaining').innerText=totalDist; updateClubDisplay(totalDist); } }
-function toggleSettings(){ const p=document.getElementById('settings-panel'); p.style.display=(p.style.display==='flex')?'none':'flex'; }
+function toggleSettings(){ 
+  const p=document.getElementById('settings-panel'); 
+  if(p.style.display !== 'flex') renderSettings();
+  p.style.display=(p.style.display==='flex')?'none':'flex'; 
+}
 
 function calc(lat1, lon1, lat2, lon2) {
   const R = 6371000;
@@ -244,14 +269,16 @@ function resetAll() {
   if (watchId) navigator.geolocation.clearWatch(watchId);
   startPos = null; lastShotPos = null; score = 0;
   document.getElementById('shot-btn').classList.remove('measuring');
-  document.getElementById('club-name').innerText = "SHOT A";
-  document.getElementById('club-name').style.fontSize = "20px";
+  document.getElementById('club-name-display').innerText = "SHOT A";
+  document.getElementById('club-name-display').style.fontSize = "20px";
   document.getElementById('club-dist-val').innerText = "";
   document.getElementById('drive').innerText = "000";
   document.getElementById('remaining').innerText = "---";
   document.getElementById('score-display').innerText = "SCORE: 0";
   document.getElementById('last-shot-dist').innerText = "LAST SHOT: --- yds";
 }
+
+renderSettings();
 </script>
 </body>
 </html>
